...
                                    <constraint firstAttribute="width" constant="60" id="uyb-3w-D0g"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3w-iL-Ccw">
                                <rect key="frame" x="16" y="773" width="398" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Login"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="KuF-c2-e8I"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <backgroundConfiguration key="background"/>
...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
                                            <outlet property="cellImage" destination="ZqG-43-F5Y" id="Ec4-y1-lZL"/>
                                            <outlet property="dateLabel" destination="uGu-PF-6WC" id="fBJ-2e-v2C"/>
                                            <outlet property="likeButton" destination="Lqc-2Q-peo" id="daj-FS-jTZ"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="6X7-Sl-PpR"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="uFD-JH-FRh"/>
...
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="ISP-ae-GAi"/>
                                    <constraint firstAttribute="width" secondItem="2PU-H4-WFE" secondAttribute="height" multiplier="1:1" id="MDC-bi-Zin"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="p0d-84-Bkm" eventType="touchUpInside" id="Bcy-0U-Cmk"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6t8-x3-SQk"/>
...
