...
             options: [],
             changeHandler: { [weak self] _,_  in
                 guard let self else { return }
                 self.presenter?.didUpdateProgressValue(webView.estimatedProgress)
             })
        
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    func load(request: URLRequest) {
        webView.load(request)
    }
    
...
